change version of node

--- a/book-tracking/Dockerfile
+++ b/book-tracking/Dockerfile
@@ -1,20 +1,14 @@
-FROM node:14 as build
+FROM node:18 as build
 
 WORKDIR /app
 
-COPY book-tracking/package*.json ./
+COPY package*.json ./
 
 RUN npm install
 
-COPY book-tracking/ ./
+COPY . .
 
 RUN npm run build
-
-FROM node:14-slim
-
-WORKDIR /app
-
-COPY --from=build /app/.next ./.next
 
 EXPOSE 3000
 
