--- a/book-tracking/package.json
+++ b/book-tracking/package.json
@@ -25,6 +25,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "daisyui": "^3.6.3"
+    "daisyui": "^3.6.3",
+    "vitest": "^0.34.3"
   }
 }
