--- a/book-tracking/package.json
+++ b/book-tracking/package.json
@@ -1,31 +1,36 @@
 {
-  "name": "book-tracking",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@material-tailwind/react": "^2.1.1",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
-  },
-  "devDependencies": {
-    "daisyui": "^3.6.3",
-    "vitest": "^0.34.3"
-  }
+	"name": "book-tracking",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "vitest"
+	},
+	"dependencies": {
+		"@material-tailwind/react": "^2.1.1",
+		"@testing-library/react": "^14.0.0",
+		"@types/node": "20.5.7",
+		"@types/react": "18.2.21",
+		"@types/react-dom": "18.2.7",
+		"autoprefixer": "10.4.15",
+		"eslint": "8.48.0",
+		"eslint-config-next": "13.4.19",
+		"jsdom": "^22.1.0",
+		"next": "13.4.19",
+		"postcss": "8.4.28",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.10.1",
+		"tailwindcss": "3.3.3",
+		"typescript": "5.2.2",
+		"vite-tsconfig-paths": "^4.2.0"
+	},
+	"devDependencies": {
+		"@testing-library/user-event": "^14.4.3",
+		"daisyui": "^3.6.3",
+		"vitest": "^0.34.3"
+	}
 }
